--- a/ideate.html
+++ b/ideate.html
@@ -7,6 +7,12 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
+    <div class="colors">
+      <div class="button" id="purple"><strong>Purple</strong></div>
+      <div class="button" id="green"><strong>Green</strong></div>
+      <div class="button" id="yellow"><strong>Yellow</strong></div>
+      <div class="button" id="brown"><strong>Brown</strong></div>
+  </div>
     <div id="canvasDiv"></div>
     <script type="text/javascript"> $(document).ready(function() {
     	 prepareCanvas();
