--- a/ideate.html
+++ b/ideate.html
@@ -3,19 +3,16 @@
   <head>
     <title>iDeate</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-    <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-    <div class="colors">
+    <div class="colorsDiv">
       <div class="button" id="purple"><strong>Purple</strong></div>
       <div class="button" id="green"><strong>Green</strong></div>
       <div class="button" id="yellow"><strong>Yellow</strong></div>
       <div class="button" id="brown"><strong>Brown</strong></div>
-  </div>
+    </div>
     <div id="canvasDiv"></div>
-    <script type="text/javascript"> $(document).ready(function() {
-    	 prepareCanvas();
-});</script>
+    <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
   </body>
 </html>
