quick start sample code
source:
https://developers.google.com/drive/v3/web/quickstart/js?authuser=2#step
_2_set_up_the_sample

--- a/ideate.html
+++ b/ideate.html
@@ -12,6 +12,9 @@
       <div class="button" id="yellow"><strong>Yellow</strong></div>
       <div class="button" id="brown"><strong>Brown</strong></div>
     </div>
+    <div class="driveDiv">
+      <div class="button" id="share"><strong>Purple</strong></div>
+    </div>
     <div id="canvasDiv"></div>
     <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
   </body>
