--- a/ideate.html
+++ b/ideate.html
@@ -4,6 +4,7 @@
     <title>iDeate</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="/html2canvas-0.4.1/build/html2canvas.js"></script>
   </head>
   <body>
     <div class="colorsDiv">
@@ -13,7 +14,7 @@
       <div class="button" id="brown"><strong>Brown</strong></div>
     </div>
     <div class="driveDiv">
-      <div class="button" id="share"><strong>Purple</strong></div>
+      <button id="share">Share</button>
     </div>
     <div id="canvasDiv"></div>
     <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
