small victory: horizontal canvas and button div placement

--- a/ideate.html
+++ b/ideate.html
@@ -19,6 +19,7 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="/html2canvas-0.4.1/build/html2canvas.js"></script>
   </head>
   <body>
     <style is="custom-style">
@@ -29,7 +30,22 @@
         /*display: block;*/
         padding-top: 5px;
         position: relative;
+        z-index: 3;
         left: -100px;
+      }
+      #canvasDiv {
+        /*position: absolute;*/
+        /*z-index: 1;*/
+        border: 5px solid navy;
+        float: right;
+        /*display: inline-block;*/
+      }
+      .colorsDiv {
+        border: 5px solid red;
+        float: left;
+        /*display: inline-block;*/
+      }
+      .drawingBoard {
       }
     </style>
     <paper-toolbar>
@@ -47,14 +63,16 @@
         </paper-menu-button>
       </template>
     </paper-toolbar>
-    <div class="colorsDiv">
-      <div class="button" id="light-blue"><strong><img src="resources/pencils_light_blue.png" /></strong></div>
-      <div class="button" id="dark-blue"><strong><img src="resources/pencils_dark_blue.png" /></strong></div>
-      <div class="button" id="yellow"><strong><img src="resources/pencils_yellow.png" /></strong></div>
-      <div class="button" id="red"><strong><img src="resources/pencils_red.png" /></strong></div>
-      <div class="button" id="black"><img src="resources/pencils_black.png" /></div>
+    <div class="drawingBoard">
+      <div class="colorsDiv">
+        <div class="button" id="light-blue"><img src="resources/pencils_light_blue.png" /></div>
+        <div class="button" id="dark-blue"><img src="resources/pencils_dark_blue.png" /></div>
+        <div class="button" id="yellow"><img src="resources/pencils_yellow.png" /></div>
+        <div class="button" id="red"><img src="resources/pencils_red.png" /></div>
+        <div class="button" id="black"><img src="resources/pencils_black.png" /></div>
+      </div>
+      <div id="canvasDiv"></div>
     </div>
-    <div id="canvasDiv"></div>
     <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
   </body>
   <script>
