omfg yes. can draw on whole canvas meow.
also: no more weird highlighting thanks to —webkit-user-select

--- a/ideate.html
+++ b/ideate.html
@@ -27,18 +27,16 @@
         --paper-toolbar-background: #FF6A0D;
       }
       .button {
-        /*display: block;*/
         padding-top: 5px;
         position: relative;
-        z-index: 3;
         left: -100px;
+        -webkit-user-select: none;
       }
       #canvasDiv {
-        border: 5px solid navy;
         float: right;
       }
       #colorsDiv {
-        border: 5px solid red;
+        width: 0px;
         float: left;
       }
     </style>
