support for other browsers (no button highlighting)

--- a/ideate.html
+++ b/ideate.html
@@ -30,7 +30,9 @@
         padding-top: 5px;
         position: relative;
         left: -100px;
-        -webkit-user-select: none;
+        -webkit-user-select: none; /* Chrome/Safari */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* IE10+ */
       }
       #canvasDiv {
         float: right;
