attempting to use cor library or uploading

--- a/ideate.html
+++ b/ideate.html
@@ -5,6 +5,7 @@
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script src="/path/to/upload.js"></script>
 
     <!--  Polymer -->
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
@@ -63,9 +64,6 @@
       <div class="button" id="yellow"><img src="resources/pencils_yellow.png" /></div>
       <div class="button" id="red"><img src="resources/pencils_red.png" /></div>
       <div class="button" id="black"><img src="resources/pencils_black.png" /></div>
-    </div>
-    <div class="driveDiv">
-      <button id="share">Share</button>
     </div>
     <div id="canvasDiv"></div>
     <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
