--- a/ideate.html
+++ b/ideate.html
@@ -46,7 +46,8 @@
     </div>
 
     <div id="canvasDiv"></div>
-
+    
+    <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=loadPicker"></script>
     <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
   </body>
 </html>
