undo works incrementally (not by press/release)

--- a/ideate.html
+++ b/ideate.html
@@ -46,7 +46,12 @@
     </div>
 
     <div id="canvasDiv"></div>
-    
+
+    <div id="undoDiv">
+      <paper-icon-button id="undo" icon="undo"></paper-icon-button>
+    </div>
+
+
     <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=loadPicker"></script>
     <script type="text/javascript">$(document).ready(function() { prepareCanvas(); });</script>
   </body>
